Fixed navbar vertical alignment

--- a/LearningPlatform/Content/site-style.css
+++ b/LearningPlatform/Content/site-style.css
@@ -12,10 +12,13 @@
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
+.navbar-nav > li > a {
+    line-height: 40px;
+}
+
 /***********************
  * Header styles
  ***********************/
-
 /* On hover effect */
 .navbar-brand span {
     position: relative;
@@ -60,6 +63,16 @@
         border-right: 2px solid #444;
         transform-origin: 0% 100%;
     }
+
+.navbar-login {
+    display: flex;
+    align-items: center;
+    height: 70px;
+}
+
+.navbar-login > * {
+    margin-right: 3px;
+}
 
 /***********************
  * Banner styles
